FIX: content doesn't shift when scrollbar disappears

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,7 @@ body {
 }
 
 body::-webkit-scrollbar {
-  width: 0.7em;
+  width: 10px;
 }
 body::-webkit-scrollbar-track {
   box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
